# GitGet_Pub

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
deploy/: Caddyfile.example  README.md  env.example  gh-desktop-receiver.service  gitget-receiver.service
docs/: packaging.md
packaging/: build-appimage.sh  build-deb.sh  gh-desktop.desktop  gh-desktop.spec  gitget.desktop  gitget.spec  org.obsidianwatch.GitGet.yaml  render_pngs.py
src/gh_desktop/: __init__.py  __main__.py  app.py  config.py  workspace.py
src/gh_desktop/api/: __init__.py  cache.py  graphql.py  ratelimit.py  rest.py
src/gh_desktop/auth/: __init__.py  github_app.py  oauth.py  session.py  storage.py
src/gh_desktop/bridge/: __init__.py
src/gh_desktop/polling/: __init__.py  engine.py
src/gh_desktop/receiver/: __init__.py  __main__.py  bus.py  server.py  storage.py
src/gh_desktop/tunnel/: __init__.py  cloudflared.py
src/gh_desktop/ui/: __init__.py  login.py  main_window.py  repo_picker.py  settings.py  theme.py
src/gitget/: __init__.py  __main__.py  app.py  config.py  models.py  workspace.py
src/gitget/api/: __init__.py  cache.py  graphql.py  rest.py
src/gitget/assets/: __init__.py
src/gitget/auth/: __init__.py  github_app.py  oauth.py  session.py  storage.py
src/gitget/bridge/: __init__.py  client.py
src/gitget/polling/: __init__.py
src/gitget/receiver/: __init__.py  __main__.py  server.py  signature.py
src/gitget/tunnel/: __init__.py
src/gitget/ui/: __init__.py  login.py  main_window.py  tray.py  (+2 more)
tests/: test_receiver.py  test_services.py  test_services_extra.py  test_smoke.py
(+52 files in other folders)
