[project]
name = "gh-desktop"
version = "0.1.0"
description = "Linux GitHub desktop app: triage, investigation case management, and org admin"
readme = "README.md"
authors = [
    { name = "jpuckett11", email = "investigations@obsidianwatch.org" }
]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8.0",
    "httpx[http2]>=0.27.2",
    "gql[httpx]>=3.5.0",
    "keyring>=25.5.0",
    "SecretStorage>=3.3.3 ; sys_platform == 'linux'",
    "PyJWT[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "PyNaCl>=1.5.0",
    "platformdirs>=4.3.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "tomli-w>=1.0.0",
    "structlog>=24.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "websockets>=13.1",
]

[project.scripts]
gh-desktop = "gh_desktop.__main__:main"
gh-desktop-receiver = "gh_desktop.receiver.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-qt>=4.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET", "PTH", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
qt_api = "pyside6"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
